--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -32,8 +32,7 @@
     display: flex;
     align-items: center;
   }
-  
-  .login-btn,
+
   .register-btn {
     background-color: transparent;
     border: 2px solid #283593;
@@ -43,7 +42,20 @@
     font-size: 14px;
     cursor: pointer;
     transition: background-color 0.3s ease;
-    margin-left: 10px;
+    margin-right: 50px;
+  }
+
+  .login-btn {
+    background-color: transparent;
+    border: 2px solid #283593;
+    color: #283593;
+    padding: 8px 20px;
+    border-radius: 20px;
+    font-size: 14px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+    margin-right: 10px;
+
   }
   
   .login-btn:hover,
